--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "validator": "^13.11.0"
   }
