--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Проект Mesto фронтенд + бэкенд",
   "main": "app.js",
   "scripts": {
-    "lint": "npx eslint .",
+    "lint": "npx eslint . --fix",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,16 +23,20 @@
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "eslint-plugin-require": "^0.0.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.0.1",
+    "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
-    "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "winston": "^3.10.0"
   }
 }
